# fast-api-learn

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 64c9e59d9a44_initial_schema.py
auth/: dependencies.py  models.py  routers.py  schemas.py  services.py  utils.py
core/: config.py  database.py
games/: models.py  routers.py  schemas.py  services.py
matches/: dependencies.py  models.py  routers.py  schemas.py  services.py
models/: player.py
players/: models.py  routers.py  schemas.py  services.py
scripts/: seed_admin.py
